--- a/index.html
+++ b/index.html
@@ -52,16 +52,43 @@
       <h2>PROJECT</h2>
       <div class="grid">
         <!-- 그리드로 섹션 분류 -->
-        <!-- Images with classification -->
-        <a href="branding1.html" class="box branding"></a>
-        <a href="motion1.html" class="box motion"></a>
-        <a href="uxui1.html" class="box uxui"></a>
-        <a href="branding2.html" class="box branding"></a>
-        <a href="motion2.html" class="box motion"></a>
-        <a href="uxui2.html" class="box uxui"></a>
-        <a href="branding3.html" class="box branding"></a>
-        <a href="motion3.html" class="box motion"></a>
-        <a href="uxui3.html" class="box uxui"></a>
+
+        <!--- branding -->
+        <a
+          href="https://youtu.be/X2BlvmG8E2s?feature=shared"
+          class="box branding"
+        >
+          <img src="image/dessert tape.png" alt="Branding Project 1" />
+        </a>
+
+        <a href="branding2.html" class="box branding">
+          <img src="image/black cat2.jpg" alt="Branding Project 2" />
+        </a>
+        <a href="branding3.html" class="box branding">
+          <img src="image/image01.png" alt="Branding Project 3" />
+        </a>
+
+        <!-- motion -->
+        <a href="motion1.html" class="box motion">
+          <img src="image/muse 03.png" alt="Motion Project 1" />
+        </a>
+        <a href="motion2.html" class="box motion">
+          <img src="image/muse01.png" alt="Motion Project 2" />
+        </a>
+        <a href="motion3.html" class="box motion">
+          <img src="image/muse02.png" alt="Motion Project 3" />
+        </a>
+
+        <!-- UXUI -->
+        <a href="uxui1.html" class="box uxui">
+          <img src="image/muse03.png" alt="UXUI Project 1" />
+        </a>
+        <a href="uxui2.html" class="box uxui">
+          <img src="image/neon city.png" alt="UXUI Project 2" />
+        </a>
+        <a href="uxui3.html" class="box uxui">
+          <img src="image/tan 01.png" alt="UXUI Project 3" />
+        </a>
       </div>
     </section>
 
