--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </a>
 
         <a href="branding2.html" class="box branding">
-          <img src="image/black cat2.jpg" alt="Branding Project 2" />
+          <img src="image/neon city.png" alt="Branding Project 2" />
         </a>
         <a href="branding3.html" class="box branding">
           <img src="image/image01.png" alt="Branding Project 3" />
@@ -84,7 +84,7 @@
           <img src="image/muse03.png" alt="UXUI Project 1" />
         </a>
         <a href="uxui2.html" class="box uxui">
-          <img src="image/neon city.png" alt="UXUI Project 2" />
+          <img src="image/black cat2.jpg" alt="UXUI Project 2" />
         </a>
         <a href="uxui3.html" class="box uxui">
           <img src="image/tan 01.png" alt="UXUI Project 3" />
